--- a/table/index.html
+++ b/table/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Official Spotify full installers</title>
-  <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
+  <link type="image/png" rel="icon" href="favicon.png">
   <link rel="preconnect" href="https://upgrade.scdn.co" crossorigin>
   <link rel="preconnect" href="https://broad-pine-bbc0.amd64fox1.workers.dev" crossorigin>
   <link rel="preload" href="https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Book.woff2" as="font"
@@ -543,12 +543,7 @@
   <nav class="nav-container">
     <div class="navbar">
       <div class="nav-brand">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" width="32" height="32" fill="#1db954">
-          <path d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8Z" />
-          <path fill="#282828"
-            d="M406.6 231.1c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3zm-31 76.2c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm-26.9 65.6c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.2z" />
-        </svg>
-        <span>Spotify</span>
+        <!-- место для лого слева -->
       </div>
       <ul class="nav-center">
         <li><a href="index.html" class="active" style="pointer-events: none; cursor: default;">Versions</a></li>
@@ -1070,8 +1065,8 @@
 
     async function initializeApp() {
       try {
-        // 1. Сначала загружаем основные данные JSON
-        const response = await fetch('https://raw.githubusercontent.com/amd64fox/LoaderSpot/refs/heads/main/versions.json');
+        // 1. Загружаем основные данные JSON
+        const response = await fetch('versions.json');
         const data = await response.json();
 
         container.innerHTML = ''; // Очищаем "Загрузка данных..."
@@ -1245,7 +1240,7 @@
           versionText.innerHTML = `<span class="short-version">${version.version.short}</span><span class="full-version">${version.version.full}</span>`;
           versionText.addEventListener('click', () => {
             navigator.clipboard.writeText(version.version.full)
-              .then(() => showToast('Скопировано в буфер обмена'))
+              .then(() => showToast('Copied to clipboard'))
               .catch(() => fallbackCopyTextToClipboard(version.version.full));
           });
           versionCell.appendChild(versionText);
